Fix inline code in markdown beeing unreadable in dark mode

--- a/src/styles.sass
+++ b/src/styles.sass
@@ -281,6 +281,10 @@ a:hover, a:visited
 .milkdown .link:focus,.milkdown .link:active
     color: var(--primary-text-visited)
 
+.milkdown .code-inline
+    background-color: var(--background)
+    color: var(--text-washed)
+
 .milkdown .code-fence
     .token.comment
         color: var(--text-washed)
